--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -5,8 +5,10 @@ title: Say Hello to Me
 
 <div class="py2">
   <form action="https://formspree.io/{{ site.email }}" method="POST" class="form-stacked form-light">
-    <input type="text" name="email" class="input mobile-block" placeholder="Email Address">
-    <textarea type="text" name="content" class="input mobile-block" rows="5" placeholder="What would you like to say?"></textarea>
+    <input type="text" name="_replyto" class="input mobile-block" placeholder="Email Address" required>
+    <input type="hidden" name="_next" value="//misterkatiyar.in" />
+    <input type="hidden" name="_subject" value="Contact at MisterKatiyar.in" />
+    <textarea type="text" name="content" class="input mobile-block" rows="5" placeholder="What would you like to say?" required></textarea>
     <input type="submit" class="button button-blue button-big mobile-block" value="Say Hello">
   </form>
 </div>
